--- a/public/css/common.css
+++ b/public/css/common.css
@@ -31,7 +31,9 @@
     --subj-8: #BB3144;
     --unchecked: #D7E0E5;
     --grey: #363434;
+    --grey-menu: #27292b;
     --orange: #EF280E;
+    --social-icon: #ccc;
     /* --grey: #292929; */
 }
 
@@ -57,6 +59,8 @@ textarea {
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     /* transition: all 0.5s ease; */
@@ -104,6 +108,10 @@ body {
 
 .brightness-110 {
     filter: brightness(110%);
+}
+
+.hover-bright:hover {
+    filter: brightness(115%);
 }
 
 .brightness-115 {
