--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,5 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); */
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 :root {
     --header-bg: #202633;
     --light-text: white;
@@ -126,7 +125,7 @@ body {
     filter: brightness(125%);
 }
 
-.text-uppercase {
+.uppercase {
     text-transform: uppercase;
 }
 
@@ -1378,7 +1377,7 @@ body {
 
 .h1 {
     font-size: 40px;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1.2;
     margin-bottom: 10px;
 }
@@ -1491,6 +1490,10 @@ body {
     height: 800px;
 }
 
+.h850 {
+    height: 850px;
+}
+
 .h900 {
     height: 900px;
 }
@@ -1501,6 +1504,42 @@ body {
 
 .h1100 {
     height: 1100px;
+}
+
+.h1200 {
+    height: 1200px;
+}
+
+.h1300 {
+    height: 1300px;
+}
+
+.h1400 {
+    height: 1400px;
+}
+
+.h1500 {
+    height: 1500px;
+}
+
+.h1600 {
+    height: 1600px;
+}
+
+.h1700 {
+    height: 1700px;
+}
+
+.h1800 {
+    height: 1800px;
+}
+
+.h1900 {
+    height: 1900px;
+}
+
+.h2000 {
+    height: 2000px;
 }
 
 .full-height {
@@ -2103,6 +2142,34 @@ body {
     margin-top: 190px;
 }
 
+.mt-200 {
+    margin-top: 200px;
+}
+
+.mt-210 {
+    margin-top: 210px;
+}
+
+.mt-220 {
+    margin-top: 220px;
+}
+
+.mt-230 {
+    margin-top: 230px;
+}
+
+.mt-240 {
+    margin-top: 240px;
+}
+
+.mt-250 {
+    margin-top: 250px;
+}
+
+.mt-260 {
+    margin-top: 260px;
+}
+
 .text-white {
     color: white;
 }
@@ -2478,10 +2545,11 @@ main {
 }
 
 .para {
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 200;
     line-height: 1.8;
     color: white;
+    text-align: justify;
 }
 
 .sub-heading {
@@ -3025,6 +3093,7 @@ a:hover {
 
 .fixed {
     position: fixed;
+    z-index: 999999;
 }
 
 .relative {
@@ -3226,6 +3295,10 @@ a:hover {
     #about_doctor {
         background-position: center 100%;
     }
+}
+
+.rotate-45 {
+    transform: rotate(45deg);
 }
 
 .hidden {
@@ -3600,6 +3673,9 @@ a:hover {
     }
     .sm_h800 {
         height: 800px;
+    }
+    .sm_h850 {
+        height: 850px;
     }
     .sm_display-none {
         display: none !important;
