--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 body {
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
     background-color: #292929;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     overflow-x: hidden;
 }
@@ -124,7 +127,7 @@ main {
     left: -250px;
     width: 250px;
     height: 100%;
-    padding: 50px 20px;
+    padding: 50px 20px 0px 20px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -133,6 +136,8 @@ main {
     -o-transition: all .3s ease-in;
     transition: all .3s ease-in;
     text-align: left;
+    display: flex;
+    flex-direction: column;
     background-color: var(--grey-menu);
 }
 
@@ -145,6 +150,21 @@ hr {
 
 #main-menu ul {
     list-style: none;
+    overflow: scroll;
+}
+
+#main-menu ul::-webkit-scrollbar {
+    display: none;
+}
+
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+#main-menu ul {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 #main-menu ul li a {
@@ -230,4 +250,221 @@ button:focus {
 
 .social-icon:hover {
     filter: brightness(130%);
+}
+
+.slider {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    max-width: 1280;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background: transparent;
+}
+
+.slider__nav {
+    width: 12px;
+    height: 12px;
+    margin: 2rem 12px;
+    border-radius: 50%;
+    z-index: 10;
+    outline: 6px solid #ccc;
+    outline-offset: -6px;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    visibility: hidden;
+}
+
+.slider__nav:checked {
+    -webkit-animation: check 0.4s linear forwards;
+    animation: check 0.4s linear forwards;
+}
+
+.slider__nav:checked:nth-of-type(1)~.slider__inner {
+    left: 0%;
+}
+
+.slider__nav:checked:nth-of-type(2)~.slider__inner {
+    left: -100%;
+}
+
+.slider__nav:checked:nth-of-type(3)~.slider__inner {
+    left: -200%;
+}
+
+.slider__nav:checked:nth-of-type(4)~.slider__inner {
+    left: -300%;
+}
+
+.slider__inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400%;
+    height: 100%;
+    -webkit-transition: left 0.4s;
+    transition: left 0.4s;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+}
+
+.slider__contents {
+    height: 100%;
+    padding: 2rem;
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    -webkit-flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.slider__image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider__caption {
+    font-weight: 500;
+    margin: 0.5rem 0 0 0;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 3px;
+}
+
+.slider__txt {
+    color: #999;
+    margin-bottom: 3rem;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    max-width: 300px;
+    padding: 3px;
+}
+
+@-webkit-keyframes check {
+    50% {
+        outline-color: #333;
+        box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+    }
+    100% {
+        outline-color: #333;
+        box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    }
+}
+
+@keyframes check {
+    50% {
+        outline-color: #333;
+        box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+    }
+    100% {
+        outline-color: #333;
+        box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    }
+}
+
+.slider_buttons {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    bottom: 10px;
+    left: calc(50%-200);
+    z-index: 9999
+}
+
+.slider_buttons {
+    margin-right: 20px;
+}
+
+.slider_buttons button {
+    border: none;
+    width: 100px;
+    height: 35px;
+    font-weight: bold;
+    background-color: black;
+    cursor: pointer;
+    outline: none;
+    color: white;
+    transition: 0.3s all ease-out;
+}
+
+.slider_buttons button:hover {
+    background-color: #27292b;
+}
+
+.slide-info {
+    bottom: 10px;
+    margin: auto;
+    width: 70%;
+    height: auto;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-close-slider {
+    color: white;
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    cursor: pointer;
+    font-weight: 200;
+    font-size: 50px;
+    transform: rotate(45deg);
+    z-index: inherit;
+}
+
+@media screen and (max-width: 800px) {
+    .slider__image {
+        height: 300px;
+    }
 }
