--- a/public/css/common.css
+++ b/public/css/common.css
@@ -315,6 +315,7 @@ body {
 }
 
 .flex-column {
+    display: flex;
     flex-direction: column;
 }
 
@@ -323,6 +324,7 @@ body {
 }
 
 .flex-row {
+    display: flex;
     flex-direction: row;
 }
 
@@ -331,6 +333,13 @@ body {
     -o-transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
+}
+
+.transition-03s {
+    -moz-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
 }
 
 .border-01-white {
@@ -422,8 +431,12 @@ body {
     align-items: space-between;
 }
 
-.marm-auto {
+.margin-auto {
     margin: auto;
+}
+
+.align-self-start {
+    align-self: flex-start;
 }
 
 .bg-grey {
@@ -972,6 +985,10 @@ body {
 
 .max-w1280 {
     max-width: 1280px;
+}
+
+.max-w1530 {
+    max-width: 1530px;
 }
 
 .full-width {
@@ -2676,8 +2693,7 @@ a:hover {
 }
 
 .sticky {
-    position: sticky;
-    bottom: 0px;
+    position: sticky !important;
     z-index: 99999;
 }
 
@@ -3190,6 +3206,14 @@ a:hover {
 .circle {
     border-radius: 50%;
     overflow: hidden;
+}
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
 }
 
 .z-index-2 {
