--- a/public/css/common.css
+++ b/public/css/common.css
@@ -69,6 +69,14 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+.inline {
+    display: inline;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
 .initials {
     text-transform: uppercase;
 }
