--- a/public/css/style.css
+++ b/public/css/style.css
@@ -377,8 +377,9 @@ button:focus {
 }
 
 .slider__image {
-    width: 100%;
-    height: 100%;
+    height: 90%;
+    max-height: 1300px;
+    max-width: 1500px;
     display: flex;
     background-size: cover;
     background-position: center;
@@ -484,4 +485,72 @@ button:focus {
     .slider__image {
         height: 300px;
     }
+}
+
+.f_slider {
+    /* border: 2px solid red; */
+}
+
+.f_slider-cell {
+    /* width: 100%; */
+    height: 100vh;
+    width: 100%;
+    max-width: 1500px;
+    margin-right: 10px;
+}
+
+
+/* big buttons, no circle */
+
+.flickity-prev-next-button {
+    width: 100px;
+    height: 100px;
+    background: transparent;
+}
+
+
+/* arrow color */
+
+.flickity-prev-next-button .arrow {
+    fill: white;
+}
+
+.flickity-prev-next-button.no-svg {
+    color: white;
+}
+
+.flickity-prev-next-button:hover {
+    background: transparent;
+}
+
+
+/* hide disabled button */
+
+.flickity-prev-next-button:disabled {
+    display: none;
+}
+
+
+/* position dots in f_slider */
+
+.flickity-page-dots {
+    bottom: 0px;
+}
+
+
+/* white circles */
+
+.flickity-page-dots .dot {
+    width: 12px;
+    height: 12px;
+    opacity: 1;
+    background: transparent;
+    border: 2px solid white;
+}
+
+
+/* fill-in selected dot */
+
+.flickity-page-dots .dot.is-selected {
+    background: white;
 }
